--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,6 +2,7 @@
 on:
   schedule:
     - cron:  '*/10 * * * *' # Every 10 minutes. Ref https://crontab.guru/examples.html
+  workflow_dispatch:
 name: Scrape Data
 jobs:
   build:
